# TinyRenderer

./: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  absorber.h  camera.h  engine.h  image.cpp  image.h  light.h  material.h  object.h  parallel_light.h  ray.h  sphere.h  vec.h
tests/: CMakeLists.txt  camera_test.cpp  engine_test.cpp  image_test.cpp  ray_test.cpp  sphere_test.cpp  vec_test.cpp
